# stm32-mpu9250

./: Cargo.toml  memory.x
src/: main.rs
