[package]
name = "stm32-mpu9250"
version = "0.1.0"
authors = ["Leah <github.leah@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
stm32l4xx-hal = { version = "0.5.0", features = ["stm32l4x6", "rt"], git = "https://github.com/stm32-rs/stm32l4xx-hal" }
panic-semihosting = "0.5.3"
embedded-hal = "0.2.3"
mpu9250 = { version = "0.22.2", features = ["i2c"] }
